data/derived/fa15/progs/unify/prog1709.ml.out
Characters 29-30:
  let f a x = x x in
                ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
